objects/PGateway_Type__c.object
<CustomObject>
    <fields>
        <fullName>Adaptive_Type__c</fullName>
        <label>Adaptive_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Type__c</fullName>
        <label>Display Type</label>
        <picklist>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Online_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onsite_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScanAttendee_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ScanAttendee Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>paytype_id__c</fullName>
        <label>paytype_id</label>
        <referenceTo>BLN_Paytype__c</referenceTo>
        <relationshipLabel>BLN PGateway Types</relationshipLabel>
        <relationshipName>BLN_PGateway_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BLN PGateway Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Display_Type__c</columns>
        <columns>Image_URL__c</columns>
        <columns>paytype_id__c</columns>
        <columns>Online_Flag__c</columns>
        <columns>Onsite_Flag__c</columns>
        <columns>ScanAttendee_Flag__c</columns>
        <columns>Adaptive_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PGateway_Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN PGateway Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>